# opal-db-management

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  pytest.ini  pytest.toml  renovate.json5  zizmor.yml
.github/workflows/: ci.yml
db_management/: reset_data.sh  run_sql_scripts.py
db_management/opaldb/: models.py
db_management/opaldb/data/initial/: 01_initial.sql  diagnosis.sql  testresults.sql
db_management/opaldb/data/test/: 01_educationmaterialcontrol.sql  01_hospitalmap.sql  01_mastersourcealias.sql  01_mastersourcediagnosis.sql  01_postcontrol.sql  01_sourcedatabase.sql  alias.sql  aliasexpression.sql  announcement.sql  appointmentcheckin.sql  cronlog.sql  educationmaterial.sql  educationmaterialpackagecontent.sql  educationmaterialtoc.sql  questionnairecontrol.sql  study.sql  testexpression.sql  testgroupexpression.sql  txteammessage.sql  z_readstatus.sql
db_management/opaldb/data/test/ohigph/: ohigph_01_patient_identifiers.sql  ohigph_appointment.sql  ohigph_diagnosis.sql  ohigph_documents.sql  ohigph_patienttestresult.sql  ohigph_questionnaire.sql
db_management/opaldb/data/test/omi/: omi_01_patient_identifiers.sql  omi_announcement.sql  omi_educationmaterial.sql  omi_patientactionlog.sql  omi_patientactivitylog.sql  omi_questionnaires.sql  omi_txteammessage.sql
db_management/opaldb/data/test/patients/: fake_patients.sql
db_management/opaldb/revision_data/: OpalDB_views_functions_events_procs.sql
db_management/opaldb/versions/: 2023_03_31-85a1cf55990c_generate_opaldb_tables.py  2024_05_02-799788987ccd_rename_educational_to_reference.py  2025_06_04-5ea831859359_remove_hospital_identifier_type_fk.py
db_management/questionnairedb/data/initial/: 01_dictionary.sql  01_initial.sql
db_management/questionnairedb/data/test/: 01_dictionary.sql  02_question.sql  03_questionnaire.sql  04_section.sql  05_questionSection.sql  05_questionnaire.sql  06_questionDetails.sql  answers.sql
db_management/questionnairedb/data/test/ohigph/: patients.sql
db_management/questionnairedb/data/test/omi/: 01_patients.sql  02_answers.sql  patients.sql
nginx/: nginx_ec2.conf
