# SPDX-FileCopyrightText: Copyright (C) 2025 Opal Health Informatics Group at the Research Institute of the McGill University Health Centre <john.kildea@mcgill.ca>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "db-management"
version = "0"
description = "DB Management for Opal's legacy databases"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "alembic==1.16.2",
    "mysqlclient==2.2.7",
    "pymysql==1.1.1",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.41",
]

[dependency-groups]
dev = [
    "alembic==1.16.2",
    "mypy==1.16.1",
    "mysqlclient==2.2.7",
    "pre-commit==4.2.0",
    "pymysql==1.1.1",
    "pytest==8.4.1",
    "pytest-alembic==0.12.1",
    "python-dotenv==1.1.1",
    "ruff==0.12.2",
    "sqlalchemy==2.0.41",
    "types-pymysql==1.1.0.20250711",
]
